--- a/QLPhongMachTuWPF/View/ModifyStaff.xaml
+++ b/QLPhongMachTuWPF/View/ModifyStaff.xaml
@@ -157,12 +157,12 @@ FontSize="16" Margin="10 0 0 0"/>
 
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 240 0 0">
-                    <ComboBox 
-                        
-                        Text="{Binding Gender , Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding GenderSource}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                     FontSize="16"/>
-                    <ComboBox Text="{Binding Type , Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding TypeSource}" x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                    FontSize="16" Margin="60 0 0 0"/>
+                    <ComboBox ItemsSource="{Binding GenderSource}" Text="{Binding Gender, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+        
+          FontSize="16"/>
+                    <ComboBox ItemsSource="{Binding TypeSource}" Text="{Binding Type, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+
+FontSize="16" Margin="60 0 0 0"/>
 
                 </StackPanel >
                 <TextBlock Text="Status" Margin="80 100 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
