change modify appointment

--- a/QLPhongMachTuWPF/View/ManageAppointments.xaml
+++ b/QLPhongMachTuWPF/View/ManageAppointments.xaml
@@ -48,7 +48,7 @@
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding MaLH, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" CanUserResize="False" Width="0.8*"/>
-                <DataGridTextColumn Header="Staff Name" Binding="{Binding TenNV, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="2*" />
+                <DataGridTextColumn Header="Staff ID" Binding="{Binding MaNV, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="2*" />
                 <DataGridTextColumn Header="Patient Name" Binding="{Binding TenBN, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="2*" />
                 <DataGridTextColumn Header="Due date" Binding="{Binding NgayKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat='dd/MM/yyyy'}"  ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False"  Width="1.5*" />
                 <DataGridTextColumn Header="Status" Binding="{Binding TrangThai, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="1.5*" />
