--- a/QLPhongMachTuWPF/View/Register.xaml
+++ b/QLPhongMachTuWPF/View/Register.xaml
@@ -3,10 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
+        xmlns:local="clr-namespace:QLPhongMachTuWPF.View" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" d:DataContext="{d:DesignInstance Type=viewmodel:RegisterVM}"
         mc:Ignorable="d"
-        
+        DataContext="{StaticResource RegisterVM}"
         Title="Register" Height="450" Width="800"
+        x:Name="FormRegister"
         WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -30,34 +31,6 @@
             </Button.Background>
         </Button>
 
-        <!--Phần bên phải--><!--
-        <Border CornerRadius="10 0 0 10" Grid.Column="0" MouseDown="Border_MouseDown">
-            <Border.Background>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="#3693ff"></GradientStop>
-                </LinearGradientBrush>
-            </Border.Background>
-
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Welcome!" 
-                       FontSize="32"
-                       FontWeight="Bold"
-                       TextAlignment="Center"
-                       Foreground="White"/>
-                <Image Source="/Images/unsecure.png" Width="200" Height="200" Panel.ZIndex="1"/>
-                <TextBlock Text="Enter your details to start your journey" 
-                       FontSize="16"
-                       LineHeight="28"
-                       TextWrapping="Wrap"
-                       TextAlignment="Center"
-                       Foreground="White"
-                       Margin="20 5"/>
-
-            </StackPanel>
-
-
-        </Border>-->
-        <!-- Phần bên trái -->
         <Border Background="#ffffff" Grid.Column="1" CornerRadius="10"  MouseDown="Border_MouseDown">
 
             <StackPanel VerticalAlignment="Center">
@@ -84,7 +57,9 @@
                                Grid.Column="1"
                                Margin="10,0,0,0"
                                Foreground="#696969"/>
-                        <TextBox x:Name="txtName" 
+                        <TextBox
+                            Text="{Binding Displayname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            x:Name="txtName" 
                                  FontSize="14"
                                  Grid.Column="1"
                                  Margin="10,0,0,0"
@@ -109,7 +84,8 @@
                                Panel.ZIndex="1"
                                Margin="10,0,0,0"
                                Foreground="#696969" Grid.ColumnSpan="2"/>
-                        <TextBox x:Name="txtUser" TextChanged="txtUser_TextChanged" 
+                        <TextBox
+                            x:Name="txtUser" TextChanged="txtUser_TextChanged" 
                              FontSize="14"
                              Grid.Column="1"
                              Text="{Binding Username}"
@@ -140,8 +116,16 @@
                                 Foreground="Black"
                                 BorderBrush="Transparent"
                                 BorderThickness="0"
-                                PasswordChanged="txtPass_TextChanged"
+                                PasswordChanged="txtPass_PasswordChanged"
                                 KeyDown="PasswordBox_KeyDown">
+                            <i:Interaction.Triggers >
+                                <i:EventTrigger EventName="PasswordChanged">
+                                    <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
+                            CommandParameter="{Binding ElementName=txtPass}">
+
+                                    </i:InvokeCommandAction>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
                         </PasswordBox>
 
                     </Grid>
@@ -152,26 +136,35 @@
                     <Grid Margin="7 9">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="284"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Text="Confirm Password" 
-                               FontSize="14"
-                               Grid.Column="1"
-                               Margin="10,0,0,0"
-                               Foreground="#696969"/>
-                        <PasswordBox x:Name="txtConfirmPass"  FontSize="14"
-                                     Grid.Column="1"
-                                     Margin="10,0,0,0"
-                                     Foreground="Black"
-                                     BorderBrush="Transparent"
-                                     BorderThickness="0"/>
+                        <TextBlock x:Name="textconfirmPassword"  MouseDown="textPassword_MouseDown" 
+                                   Text="Confirm Password"  FontSize="14"
+                                Grid.Column="1"
+                                Panel.ZIndex="1"
+                                Margin="10 0 0 0"
+                                Foreground="#696969"/>
+                        <PasswordBox x:Name="txtConfirmPass"  
+                             FontSize="14"
+                             Grid.Column="1"
+                             Margin="10 0 0 0"
+                             Foreground="Black"
+                             BorderBrush="Transparent"
+                             BorderThickness="0">       
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="PasswordChanged">
+                                    <i:InvokeCommandAction Command="{Binding PasswordConfirmChangedCommand}" 
+                                   CommandParameter="{Binding ElementName=txtConfirmPass}" />
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </PasswordBox>
                     </Grid>
                 </Border>
 
                 <Button x:Name="btnLogin" Background="#1d6fc1"
-                    Command="{Binding LoginCommand}"
-                    CommandParameter="{Binding ElementName=FormLogin}"
+                    Command="{Binding RegisterCommand}"
+        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
                     Style="{StaticResource MaterialDesignRaisedButton}"
                     Width="170"
                    Click="Button_Click"
