--- a/QLPhongMachTuWPF/View/Invoice.xaml
+++ b/QLPhongMachTuWPF/View/Invoice.xaml
@@ -39,7 +39,9 @@
 
         
 
-        <DataGrid Grid.Row="1" ItemsSource="{Binding InvoiceList}" Background="#eeeeee" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="patientsDatagrid" Margin="0,0,0,10"
+        <DataGrid Grid.Row="1" ItemsSource="{Binding FilteredInvoice}"
+                  SelectedItem="{Binding SelectedInvoice}"
+                  Background="#eeeeee" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="patientsDatagrid" Margin="0,0,0,10"
          HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
@@ -93,7 +95,10 @@ Style="{StaticResource gridRemoveBtn}" Background="Red">
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button   Grid.Row="0"   Style="{StaticResource anotherAddBtn}" >
+        
+        <Button 
+            Command="{Binding ModifyInvoiceCommand}"
+            Grid.Row="0"   Style="{StaticResource anotherAddBtn}" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Modify invoice" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
