--- a/QLPhongMachTuWPF/View/Invoice.xaml
+++ b/QLPhongMachTuWPF/View/Invoice.xaml
@@ -82,9 +82,14 @@
                             <StackPanel Orientation="Horizontal">
 
 
-                               
+                                <Button
+                                  Command="{Binding DataContext.VerifyCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                  CommandParameter="{Binding}"
+                                  x:Name="btnVerify" Style="{StaticResource gridRemoveBtn}" Background="Green">             
+                                    <materialDesign:PackIcon Kind="CheckBold" Width="20" Height="20" Foreground="White"/>
+                                </Button>
                                 <Button 
-Style="{StaticResource gridRemoveBtn}" Background="Red">
+                                    Style="{StaticResource gridRemoveBtn}" Background="Red">
                                     <materialDesign:PackIcon Kind="TrashCan" Width="20" Height="20" Foreground="White" />
                                 </Button>
                             </StackPanel>
