--- a/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
@@ -6,9 +6,8 @@
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
         Title="DetailInovice" Height="800" Width="880"
-        DataContext="{StaticResource DetailsInvoice}"
-        
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:DetailsInvoice}"
+        DataContext="{StaticResource ModifyDetailInvoiceVM}"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ModifyDetailInvoiceVM}"
         WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
 
     <Window.Resources>
@@ -54,13 +53,6 @@
                     </Border.Background>
                 </Border>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <TextBlock Text="M" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="O" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="D" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="F" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="Y" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text=" " Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                     <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                     <TextBlock Text="N" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                     <TextBlock Text="V" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
@@ -68,6 +60,14 @@
                     <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                     <TextBlock Text="C" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                     <TextBlock Text="E" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text=" " Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="D" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="E" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="T" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="A" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="L" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="S" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
 
                 </StackPanel>
             </Grid>
@@ -86,30 +86,31 @@
             <!--Chu-->
             <Grid Grid.Row="0" MouseDown="Border_MouseDown" Grid.ColumnSpan="2">
                 <Button x:Name="btnClose"
-     BorderBrush="#3693ff"
-    Grid.Column="1" Panel.ZIndex="1"
-       Width="30"
-       Height="30"
-       VerticalAlignment="Top"
-       HorizontalAlignment="Right"
-       Margin="0 13 13 0"
-       Click="btnClose_Click"
-        BorderThickness="0">
+  BorderBrush="#3693ff"
+ Grid.Column="1" Panel.ZIndex="1"
+    Width="30"
+    Height="30"
+    VerticalAlignment="Top"
+    HorizontalAlignment="Right"
+    Margin="0 13 13 0"
+    Click="btnClose_Click"
+     BorderThickness="0">
                     <Button.Background >
                         <ImageBrush ImageSource="/Images/image.png"
-                    Stretch="Fill"
-                    />
+                 Stretch="Fill"
+                 />
                     </Button.Background>
                 </Button>
                 <Border CornerRadius="0 10 0 0" Background="White"/>
-                <TextBlock Text="MODIFY INVOICE" Style="{StaticResource titleText}" HorizontalAlignment="Center" Margin="0 0 0 0"/>
+                <TextBlock Text="INVOICE DETAILS" Style="{StaticResource titleText}" HorizontalAlignment="Center" Margin="0 0 0 0"/>
             </Grid>
 
             <!--Input-->
 
             <Grid Grid.Row="1" Grid.ColumnSpan="2">
 
-                <Border CornerRadius="0 0 10 0" Background="White"/>
+                <Border CornerRadius="0 0 10 0" Background="White">
+                </Border>
                 <StackPanel Orientation="Vertical">
                     <StackPanel Orientation="Horizontal">
                         <Rectangle Fill="#1f2f98" Margin="10 0 0 0" Width="10" HorizontalAlignment="Left" VerticalAlignment="top" Height="120" />
@@ -131,9 +132,9 @@
 
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="auto" Height="auto" Margin="0 -100 50 0">
                         <TextBox Text="{Binding ID, Mode=TwoWay}" Foreground="Black" 
-                           Style="{StaticResource txtTextBox}" FontWeight="Normal"
-                           VerticalAlignment="Top" HorizontalAlignment="Left" 
-                           Margin="-10 10" FontSize="14" BorderBrush="Transparent"/>
+                                    Style="{StaticResource txtTextBox}" FontWeight="Normal"
+                                    VerticalAlignment="Top" HorizontalAlignment="Left" 
+                                    Margin="-10 10" FontSize="14" BorderBrush="Transparent"/>
                         <TextBox Text="{Binding NgayHoanThanh, Mode=TwoWay, StringFormat='dd/MM/yyyy'}" Style="{StaticResource txtTextBox}" HorizontalAlignment="Left" FontWeight="Normal" Margin="-10 0 0 0" FontSize="14" BorderBrush="Transparent"/>
 
                     </StackPanel>
@@ -143,19 +144,23 @@
 
 
                     <DataGrid AutoGenerateColumns="False" HeadersVisibility="Column" 
-                  CanUserAddRows="False" IsReadOnly="True" 
-                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                  Margin="10" x:Name="datagrid" 
-                               ItemsSource="{Binding CollectionViewMedicine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                         CanUserAddRows="False" 
+                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                             Margin="10" x:Name="datagrid" 
+                           SelectedItem="{Binding SelectedMedicine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            ItemsSource="{Binding CollectionViewMedicine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                           HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="#"   Width="0.5*" Binding="{Binding MaPK}"/>
-                            <DataGridTextColumn Header="MEDICINE"  Width="*" Binding="{Binding MaThuoc}"/>
-                            <DataGridTextColumn Header="PRICE"  Width="*" Binding="{Binding DonGia}"/>
+                            <DataGridTextColumn Header="#" IsReadOnly="True" Width="0.5*" Binding="{Binding MaPK, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <DataGridTextColumn Header="MEDICINE" IsReadOnly="True"  Width="*" Binding="{Binding MaThuoc, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <DataGridTextColumn Header="QUANTITY"  Width="0.8*" Binding="{Binding SoLuong, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <DataGridTextColumn Header="INSTRUCTION"  Width="2*" Binding="{Binding CachDung, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ElementStyle="{StaticResource textBlockDatagrid}"/>
+                            <DataGridTextColumn Header="PRICE" IsReadOnly="True"  Width="*" Binding="{Binding DonGia, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
-                            <DataGridTextColumn Header="QUANTITY"  Width="1.5*" Binding="{Binding SoLuong}"/>
-                            <DataGridTextColumn Header="INSTRUCTION"  Width="*" Binding="{Binding CachDung}" ElementStyle="{StaticResource textBlockDatagrid}"/>
-                            <DataGridTextColumn Header="STATUS"  Width="*" Binding="{Binding TrangThai}"/>
+
+
+
+
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
