--- a/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
@@ -165,8 +165,12 @@
                     </DataGrid>
 
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="0 450" HorizontalAlignment="Center">
-                        <Button Content="Save changes" Margin="10 0 80 0" FontSize="20" Width="180" Height="40" Foreground="White"/>
-                        <Button Content="Print" Margin="0 10" Width="180" FontSize="20" Height="40" Foreground="White"/>
+                        <Button
+                            Command = "{Binding SaveChangesCommand}"
+                            Content="Save changes" Margin="10 0 80 0" FontSize="20" Width="180" Height="40" Foreground="White"/>
+                        <Button
+                            Command="{Binding PrintCommand}"
+                            Content="Print" Margin="0 10" Width="180" FontSize="20" Height="40" Foreground="White"/>
                     </StackPanel>
                 </StackPanel>
             </Grid>
